--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Your awesome title
 author: Roman Penyaev
-#email: your-email@example.com
+email: r.peniaev@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -24,6 +24,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://rouming.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  rouming
 linkedin_username: romanpen
+rss: feed.xml
 
 # Build settings
 markdown: kramdown
