Enable excerpts, add about and blog description
Signed-off-by: Roman Penyaev <r.peniaev@gmail.com>

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -13,13 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
+title: Why So Serious
 author: Roman Penyaev
 email: r.peniaev@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A blog covering things where an electric charge flows, where zeros become ones and back, and what can be described by an equation
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://rouming.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  rouming
@@ -29,6 +27,7 @@ rss: feed.xml
 # Build settings
 markdown: kramdown
 theme: minima
+show_excerpts: true
 plugins:
   - jekyll-feed
 
